--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel reactstart webservice",
+    "reactstart": "react-scripts start",
+    "webservice": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
